--- a/style.css
+++ b/style.css
@@ -51,15 +51,18 @@ h3 {
     padding-bottom: 40px;
 }
 
-.project-tile {
+.tile {
     border-top: 1px solid black;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding: 25px 0 25px 0;
 }
 
-.project-tile:hover {
-    colour: black;
+
+.tile2 {
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 25px 0 25px 0;
 }
+
 
 .about {
     display: flex;
