--- a/style.css
+++ b/style.css
@@ -52,15 +52,9 @@ h3 {
 }
 
 .tile {
-    border-top: 1px solid black;
-    padding: 25px 0 25px 0;
-}
-
-
-.tile2 {
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    padding: 25px 0 25px 0;
+    border: 1px solid #061F44;
+    border-radius: 25px;
+    padding: 25px 0 25px 25px;
 }
 
 
@@ -119,5 +113,4 @@ h3 {
 .project1-img {
     display: block;
     width: 100%;
-
 }
