--- a/style.css
+++ b/style.css
@@ -43,12 +43,19 @@ h2 {
 
 .intro-text {
     max-width: 700px;
+}
+
+.hp-intro {
     padding-bottom: 250px;
 }
 
 h3 {
     font-size: 56px;
     padding-bottom: 40px;
+}
+
+.projects {
+    padding-bottom: 250px;
 }
 
 .tile {
