--- a/style.css
+++ b/style.css
@@ -143,3 +143,19 @@ h3 {
     display: block;
     width: 100%;
 }
+
+
+section.image-text-button {
+    background-image: url('/Users/iva/Desktop/VS Code/PORTFOLIO-CODE/Images/20231112_065543.jpg');
+    background-position: 0 50%;
+    background-size: cover;
+    background-repeat: no repeat;
+    background-attachment: fixed;
+    height: 100px;
+    padding: 150px 0 150px 0;
+}
+
+
+.placeholder {
+    padding: 50px 0 1000px 0;
+}
