--- a/style.css
+++ b/style.css
@@ -97,8 +97,8 @@ h3 {
     position: sticky;
     top: 100px;
     z-index: 100;
+    height: 100%;
     background-color: transparent;
-    max-height: 250px;
     padding-right: 75px;
     border-right: 2px solid #061f44;
     /*text-align: right;*/
@@ -106,12 +106,13 @@ h3 {
 
 .tldr {
     font-size: 24px;
-    padding-bottom: 25px;
+    padding-bottom: 10px;
     padding-top: 15px;
 }
 
 .short-form {
     font-size: 46px;
+    padding-bottom: 15px;
 }
 
 .about-right {
