--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ h3 {
     background-color: transparent;
     padding-right: 75px;
     border-right: 2px solid #061f44;
+    max-width: 500px;
     /*text-align: right;*/
 }
 
@@ -147,7 +148,7 @@ h3 {
 
 
 section.image-text-button {
-    background-image: url('/Users/iva/Desktop/VS Code/PORTFOLIO-CODE/Images/20231112_065543.jpg');
+    background-image: url('/Images/20231112_065543.jpg');
     background-position: 0 50%;
     background-size: cover;
     background-repeat: no repeat;
