--- a/style.css
+++ b/style.css
@@ -15,14 +15,6 @@ nav {
     padding: 75px 0 75px 0;
 }
 
-h6 {
-    font-size: 18px;
-    font-family: "Kumbh Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    font-style: normal;
-}
-
 .right-nav {
     display: flex;
     justify-content: space-between;
@@ -42,18 +34,34 @@ h1 {
     line-height: 185px;
 }
 
-H2 {
+h2 {
     font-size: 100px;
     font-family: "Kumbh Sans", sans-serif;
     font-weight: 900;
-    line-height: 96px;
+    line-height: 95px;
 }
 
 h3 {
+    font-size: 80px;
+    font-family: "Kumbh Sans", sans-serif;
+    font-weight: 900;
+}
+
+
+h4 {
     font-family: "Kumbh Sans", sans-serif;
     font-size: 42px;
     font-weight: 500;
     line-height: 56px;
+}
+
+h6 {
+    font-size: 18px;
+    font-family: "Kumbh Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    line-height: 30px;
 }
 
 .hp-intro {
@@ -77,30 +85,54 @@ h3 {
 
 .tile {
     display: flex;
-    align-items: center;
-    height: 500px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    height: 450px;
     padding-left: 80px;
 }
 
 .pas {
-    background-image: url('./Images/Group 770 (1).jpg');
+    background-image: url('./Images/PAS-BG.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
 
+
+.tile:hover .pas,
+.pas:hover .project-name,
+.pas:hover .list-start,
+.pas:hover .list-follow {
+    opacity: 0;
+}
+
+
+
 .stv {
-    background-image: url('./Images/Group 771.jpg');
+    background-image: url('./Images/STV-BG.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+}
+
+.stv:hover .project-name,
+.stv:hover .list-start,
+.stv:hover .list-follow {
+    opacity: 0;
 }
 
 .cslr {
-    background-image: url('./Images/Group 757.jpg');
+    background-image: url('./Images/CSLR-BG.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+}
+
+.cslr:hover .project-name,
+.cslr:hover .list-start,
+.cslr:hover .list-follow {
+    opacity: 0;
 }
 
 
@@ -123,6 +155,25 @@ h3 {
 
 .list-follow {
     color: #ffffff;
+}
+
+
+footer {
+    padding-bottom: 75px;
+}
+
+.footer-text {
+    padding: 20px 0 30px 0;
+    max-width: 475px;
+}
+
+.footer-links {
+    font-size: 18px;
+    font-family: "Kumbh Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    padding-top: 10px;
+    line-height: 40px;
 }
 
 
