--- a/style.css
+++ b/style.css
@@ -105,15 +105,18 @@ h6 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 300px;
     opacity: 0;
     height: 0;
     transform: translateY(290px);
-    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
+
 
 .pas:hover .project-show-hover {
     opacity: 1;
     transform: translateY(0);
+    transition: all 0.3s ease-in;
+    margin-top: auto;
 }
 
 .tile-cta {
