--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
 
 body {
     margin: 0 120px 0 120px;
+    font-size: 16px;
+    font-family: "Kumbh Sans", sans-serif;
+    line-height: 26px;
+    font-weight: 300;
+
 }
 
 nav {
@@ -55,6 +60,13 @@ h4 {
     line-height: 56px;
 }
 
+
+h5 {
+    font-family: "Kumbh Sans", sans-serif;
+    font-size: 32px;
+    font-weight: 500;
+}
+
 h6 {
     font-size: 18px;
     font-family: "Kumbh Sans", sans-serif;
@@ -62,6 +74,7 @@ h6 {
     font-weight: 500;
     font-style: normal;
     line-height: 30px;
+    padding-bottom: 5px;
 }
 
 .hp-intro {
@@ -226,6 +239,10 @@ footer {
     padding-bottom: 75px;
 }
 
+.footer-title {
+    padding-bottom: 25px;
+}
+
 .footer-text {
     padding: 20px 0 30px 0;
     max-width: 475px;
@@ -244,6 +261,7 @@ footer {
 .about {
     display: flex;
     gap: 120px;
+    padding-top: 50px;
 }
 
 .about-left {
@@ -253,6 +271,7 @@ footer {
     height: 100%;
     background-color: transparent;
     padding-right: 75px;
+    padding-bottom: 15px;
     border-right: 2px solid #061f44;
     max-width: 500px;
     /*text-align: right;*/
@@ -274,14 +293,13 @@ footer {
 
 .about-right {
     font-size: 18px;
-    max-width: 650px;
+    max-width: 700px;
 }
 
 
 .about-heading {
-    padding-top: 80px;
+    padding-top: 100px;
     padding-bottom: 25px;
-    font-size: 36px;
 }
 
 
